[fixed] adjust `select` style on Firefox, resolved #556
- add `-moz-appearance: none;` to `select` styles
- Thx to  @photino

--- a/less/form.less
+++ b/less/form.less
@@ -178,6 +178,7 @@ output {
   select {
     // via Foundation
     -webkit-appearance: none !important;
+    -moz-appearance: none !important; // since Firefox 31 ?
     -webkit-border-radius: @global-radius;
     background: #fff url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZlcnNpb249IjEuMSIgeD0iMTJweCIgeT0iMHB4IiB3aWR0aD0iMjRweCIgaGVpZ2h0PSIzcHgiIHZpZXdCb3g9IjAgMCA2IDMiIGVuYWJsZS1iYWNrZ3JvdW5kPSJuZXcgMCAwIDYgMyIgeG1sOnNwYWNlPSJwcmVzZXJ2ZSI+PHBvbHlnb24gcG9pbnRzPSI1Ljk5MiwwIDIuOTkyLDMgLTAuMDA4LDAgIi8+PC9zdmc+') no-repeat 100% center;
 
